@@ -1,14 +1,0 @@
-# this file is part of refractiveindex.info database
-# refractiveindex.info database is in the public domain
-# copyright and related rights waived via CC0 1.0
-
-REFERENCES: |
-    <a href="http://www.cargille.com/specimmerliq.shtml">CARGILLE Fused Silica matching liquid (code 06350) characteristics</a>. Jan. 15, 2002
-COMMENTS: |
-    Code 06350 (viscosity 80 cSt). 25 °C.
-DATA:
-  - type: formula 5
-    wavelength_range: 0.225 1.55
-    coefficients: 1.447193 383343.3E-8 -2 5.661342E-5 -4
-CONDITIONS:
-    temperature: 298
