@@ -1,14 +1,0 @@
-# this file is part of refractiveindex.info database
-# refractiveindex.info database is in the public domain
-# copyright and related rights waived via CC0 1.0
-
-REFERENCES: |
-    <a href="http://www.cargille.com/specimmerliq.shtml">CARGILLE Fused Silica matching liquid (code 50350) characteristics.</a> Jan. 15, 2002
-COMMENTS: |
-    Code 50350 (viscosity 19 cSt). 25 °C.
-DATA:
-  - type: formula 5
-    wavelength_range: 0.225 1.55
-    coefficients: 1.446902 398962.9E-8 -2 3.757747E-5 -4
-CONDITIONS:
-    temperature: 298
