@@ -1,5 +1,14 @@
 ﻿============================== next release ==============================
 
+  new data  
+    specs/cargille/index-matching liquids/nk/acrylic_double_matching_liquid.yml
+  updated data
+    specs/cargille/index-matching liquids/nk/BK7_matching_liquid.yml
+    specs/cargille/index-matching liquids/nk/fused_silica_matching_liquid-06350.yml
+    specs/cargille/index-matching liquids/nk/fused_silica_matching_liquid-50350.yml
+    specs/cargille/index-matching liquids/nk/acrylic_matching_liquid.yml  
+  re-arrangement
+    'other/index-matching liquids/cargille/*' is now 'specs/cargille/index-matching liquids/*'
   new data (thanks to Pavel Dmitriev, for writing calculation scripts and submitting data in YAML format on GitHub!)
     main/DyScO3/nk/Chernova.yml (updated with data calculated from the model)
     main/LaAlO3/nk/Chernova.yml
